tests/snapshots/cli__basic_string_schema_with_title.snap
---
source: tests/cli.rs
expression: json
---
{
  "type": "record",
  "name": "document",
  "namespace": "basic_string_schema_with_title",
  "fields": [
    {
      "name": "name",
      "type": "string"
    }
  ]
}
