tests/snapshots/cli__nested_object_and_array.diff.snap
---
source: tests/cli.rs
expression: diff
---
 {

   "type": "record",

   "name": "document",

   "namespace": "com.example.complex_object",

   "fields": [

     {

       "name": "name",

       "type": "string"

     },

     {

       "name": "age",

       "type": "int"

     },

     {

       "name": "address",

       "type": [

         "null",

         {

+          "type": "record",

           "name": "address",

-          "type": "record",

           "namespace": "com.example.complex_object.document_types",

           "fields": [

             {

               "name": "street",

               "type": "string"

             },

             {

               "name": "city",

               "type": "string"

             },

             {

               "name": "state",

               "type": "string"

             },

             {

               "name": "postalCode",

               "type": "string"

             }

           ]

         }

       ]

     },

     {

       "name": "hobbies",

       "type": [

         "null",

         {

           "type": "array",

           "items": "string"

         }

       ]

     }

   ]

 }
