tests/snapshots/cli__object_allof.diff.snap
---
source: tests/cli.rs
expression: diff
---
 {

+  "type": "record",

   "name": "document",

-  "type": "record",

   "namespace": "object_allof",

   "fields": [

     {

       "name": "a",

       "type": [

         "null",

         "string"

       ]

     },

     {

       "name": "b",

       "type": [

         "null",

         "int"

       ]

     }

   ]

 }
