tests/snapshots/cli__object_allof.snap
---
source: tests/cli.rs
expression: json
---
{
  "type": "record",
  "name": "document",
  "namespace": "object_allof",
  "fields": [
    {
      "name": "a",
      "type": [
        "null",
        "string"
      ]
    },
    {
      "name": "b",
      "type": [
        "null",
        "int"
      ]
    }
  ]
}
