tests/snapshots/cli__object_dependentschemas.snap
---
source: tests/cli.rs
expression: json
---
{
  "type": "record",
  "name": "document",
  "namespace": "object_dependentschemas",
  "fields": [
    {
      "name": "country",
      "type": [
        "null",
        "string"
      ]
    },
    {
      "name": "postalCode",
      "type": [
        "null",
        "string"
      ]
    }
  ]
}
