tests/snapshots/cli__object_if_then_else.snap
---
source: tests/cli.rs
expression: json
---
{
  "type": "record",
  "name": "document",
  "namespace": "object_if_then_else",
  "fields": [
    {
      "name": "isStudent",
      "type": [
        "null",
        "boolean"
      ]
    },
    {
      "name": "discount",
      "type": [
        "null",
        "float"
      ]
    }
  ]
}
