tests/snapshots/cli__object_pattern_properties.snap
---
source: tests/cli.rs
expression: json
---
{
  "type": "record",
  "name": "document",
  "namespace": "object_pattern_properties",
  "fields": [
    {
      "name": "document",
      "type": {
        "type": "map",
        "values": [
          "string",
          "int"
        ],
        "name": "document"
      }
    }
  ]
}
